--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "cookie-parser": "~1.3.5",
     "cors": "^2.7.1",
     "debug": "~2.2.0",
-    "express": "~4.13.1",
+    "express": "^4.13.4",
     "mongoose": "^4.3.7",
     "morgan": "~1.6.1"
   }
