--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cors": "^2.7.1",
     "debug": "~2.2.0",
     "express": "^4.13.4",
+    "lodash": "^4.17.2",
     "mongoose": "^4.3.7",
     "morgan": "~1.6.1"
   }
